--- a/第三章 XLua教程/3_16 载入Lua脚本.md
+++ b/第三章 XLua教程/3_16 载入Lua脚本.md
@@ -37,3 +37,33 @@
 ```lua
     print('hello world')
 ```
+
+####二、通过字符串
+
+```csharp
+    using UnityEngine;
+    using System.Collections;
+    using XLua;
+    
+    public class ByString : MonoBehaviour {
+        LuaEnv luaenv = null;
+        // Use this for initialization
+        void Start () {
+            luaenv = new LuaEnv();
+            luaenv.DoString("print('hello world')");
+        }
+    	
+    	// Update is called once per frame
+    	void Update () {
+    	    if (luaenv != null)
+            {
+                luaenv.Tick();
+            }
+    	}
+    
+        void OnDestroy()
+        {
+            luaenv.Dispose();
+        }
+    }
+```
