Updates 第三章 XLua教程/3_16 载入Lua脚本.md
Auto commit by GitBook Editor

--- a/第三章 XLua教程/3_16 载入Lua脚本.md
+++ b/第三章 XLua教程/3_16 载入Lua脚本.md
@@ -67,3 +67,45 @@
         }
     }
 ```
+
+####通过加载器
+
+```csharp
+    using UnityEngine;
+    using System.Collections;
+    using XLua;
+    
+    public class CustomLoader : MonoBehaviour {
+        LuaEnv luaenv = null;
+        // Use this for initialization
+        void Start()
+        {
+            luaenv = new LuaEnv();
+            luaenv.AddLoader((ref string filename) => {
+                 if (filename == "InMemory")
+                 {
+                     string script = "return {ccc = 9999}";
+                     return System.Text.Encoding.UTF8.GetBytes(script);
+                 }
+                 return null;
+             });
+            luaenv.DoString("print('InMemory.ccc=', require('InMemory').ccc)");
+        }
+    
+        // Update is called once per frame
+        void Update()
+        {
+            if (luaenv != null)
+            {
+                luaenv.Tick();
+            }
+        }
+    
+        void OnDestroy()
+        {
+            luaenv.Dispose();
+        }
+    }
+```
+
+🔚
