--- a/第三章 XLua教程/3_16 载入Lua脚本.md
+++ b/第三章 XLua教程/3_16 载入Lua脚本.md
@@ -39,29 +39,80 @@
 ####二、通过字符串
 
 ```csharp
-    using UnityEngine;
-    using System.Collections;
-    using XLua;
-    
-    public class ByString : MonoBehaviour {
-        LuaEnv luaenv = null;
-        void Start () {
-            luaenv = new LuaEnv();
-            luaenv.DoString("print('hello world')");
-        }
-    	
-    	void Update () {
-    	    if (luaenv != null)
+/*
+ *  created by shenjun
+ */
+
+using System.Collections;
+using System.Collections.Generic;
+using UnityEngine;
+
+/*
+ * 1、引入命名空间
+ */
+using XLua;
+
+namespace shenjun
+{
+	public class ByString : MonoBehaviour {
+
+        LuaEnv luaEnv = new LuaEnv();
+
+        [Multiline(10)]
+        public string luaStr1 = 
+            @"function Show(...)
+                 local t = {...}
+                 for i=1,#t do
+                     print(t[i])
+                 end
+              end
+              Show(5,3,4,1,2)";
+
+        [Multiline(10)]
+        public string luaStr2 = 
+            @"function GetResult()
+                  return 1, '2'
+              end
+              return GetResult()";
+
+		void Start () {
+            
+            // public object[] DoString(string chunk, string chunkName = "chunk", LuaTable env = null)
+            // 参数1: Lua代码
+            // 参数2: 发生error时debug显示信息时使用，指明某某代码块的某行错误
+            // 参数3: 为这个代码块
+            // 返回值：Lua代码的返回值
+
+            // 执行Lua代码
+            luaEnv.DoString("print('Hello World!')");
+            luaEnv.DoString(luaStr1);
+            object[] results = luaEnv.DoString(luaStr2);
+            if(results != null)
             {
-                luaenv.Tick();
+                foreach (var item in results)
+                {
+                    Debug.Log(item);
+                }
             }
-    	}
-    
-        void OnDestroy()
+        }
+		
+		void Update () {
+
+            if(luaEnv != null)
+            {
+                // 清除Lua未手动调用的LuaBase（比如LuaTable，LuaFunction），及其他一些事情。
+                // 需要定期调用。
+                luaEnv.Tick();
+            }
+			
+		}
+
+        private void OnDestroy()
         {
-            luaenv.Dispose();
+            luaEnv.Dispose();
         }
     }
+}
 ```
 
 ####三、通过加载器
