Updates 第三章 XLua教程/3_16 载入Lua脚本.md
Auto commit by GitBook Editor

--- a/第三章 XLua教程/3_16 载入Lua脚本.md
+++ b/第三章 XLua教程/3_16 载入Lua脚本.md
@@ -12,6 +12,7 @@
         void Start()
         {
             luaenv = new LuaEnv();
+            // 使用默认loader加载Resources下的"byfile.lua.txt"文件
             luaenv.DoString("require 'byfile'");
         }
     
