Updates 第三章 XLua教程/3_16 载入Lua脚本.md
Auto commit by GitBook Editor

--- a/第三章 XLua教程/3_16 载入Lua脚本.md
+++ b/第三章 XLua教程/3_16 载入Lua脚本.md
@@ -118,6 +118,8 @@
 
 ####三、通过加载器
 
+**Example01**
+
 ```csharp
     using UnityEngine;
     using System.Collections;
@@ -150,6 +152,90 @@
         void OnDestroy()
         {
             luaenv.Dispose();
+        }
+    }
+```
+
+Example02
+
+```csharp
+    /*
+     *  created by shenjun
+     */
+    
+    using System.Collections;
+    using System.Collections.Generic;
+    using UnityEngine;
+    using System.IO;
+    
+    using XLua;
+    
+    namespace shenjun
+    {
+    	public class ByLoader : MonoBehaviour {
+    
+            LuaEnv luaEnv = new LuaEnv();
+    
+    		void Start () {
+    
+                // 注册自定义loader
+                luaEnv.AddLoader((ref string filePath)=>{
+                    string path = Application.dataPath + "/LessonXLua_shenjun/01_LoadLuaScript/03_ByLoader/" + filePath + ".lua.txt";
+                    if(File.Exists(path))
+                    {
+                        string text = "";
+                        using (StreamReader sr = new StreamReader(path))
+                        {
+                            try
+                            {
+                                text = sr.ReadToEnd();
+                            }
+                            catch(System.Exception ex)
+                            {
+                                Debug.LogError("ReadFile Error :" + path + "; ErrorMsg :" + ex.Message);
+                                return null;
+                            }
+                        }
+                        return System.Text.Encoding.UTF8.GetBytes(text);
+    
+                        //byte[] buffer;
+                        //using(FileStream fsReader = new FileStream(path, FileMode.Open, FileAccess.Read))
+                        //{
+                        //    buffer = new byte[fsReader.Length];
+                        //    try
+                        //    {
+                        //        fsReader.Read(buffer, 0, (int)fsReader.Length);
+                        //        return buffer;
+                        //    }
+                        //    catch
+                        //    {
+                        //        return null;
+                        //    }
+                        //}
+                    }
+                    else
+                    {
+                        return null;
+                    }
+                });
+    
+                // 如果注册了自定义的loader，会先查找自定义loader，如果自定义loader返回null，则会使用默认loader，如果默认loader也没找到，则报错。
+                luaEnv.DoString("require 'byloader'");
+    		}
+    		
+    		void Update () {
+    
+                if(luaEnv != null)
+                {
+                    luaEnv.Tick();
+                }
+    			
+    		}
+    
+            private void OnDestroy()
+            {
+                luaEnv.Dispose();
+            }
         }
     }
 ```
