--- a/第三章 XLua教程/3_16 载入Lua脚本.md
+++ b/第三章 XLua教程/3_16 载入Lua脚本.md
@@ -118,7 +118,7 @@
 
 ####三、通过加载器
 
-**Example01**
+**Example01 :**
 
 ```csharp
     using UnityEngine;
@@ -156,7 +156,7 @@
     }
 ```
 
-**Example02**
+**Example02 :**
 
 ```csharp
     /*
