Updates 第一章 Lua程序设计/1_16 字符串库.md
Auto commit by GitBook Editor

--- a/第一章 Lua程序设计/1_16 字符串库.md
+++ b/第一章 Lua程序设计/1_16 字符串库.md
@@ -1,5 +1,57 @@
 ##字符串库
 
+```lua
+    --[[ lua function
+    -- 大小写转换
+    --print(string.upper(msg))
+    --print(string.lower(msg))
+    --print(msg:upper())
+    --print(msg:lower())
+    
+    -- 重复字符串
+    --print(string.rep(msg, 2))
+    --print(msg:rep(2))
+    
+    -- 截取子串
+    print(string.sub(msg, 3, -1)) -- -1表示最后1位字符 -2代表倒数第2个字符
+    
+    a = "[Hello World!]"
+    a = a:sub(2, -2)  -- 字符串是不可变的
+    print(a) -- 表示去掉第1个和最后1个字符
+    
+    -- 字符与asc码转换
+    print(string.char(97))        --> a
+    i = 99;print(string.char(i, i+1, i+2))    --> cde
+    print(string.byte("abc"))        --> 97
+    print(string.byte("abc", 2))        --> 98
+    print(string.byte("abc", -1))        --> 99
+    
+    -- 格式化字符串
+    print(string.format("%s, %d", "===", i))
+    
+    -- 查找子串
+    i, j = string.find(a, "Hello")  -- i,j分别为找到的起始索引与结束索引，没找到返回nil
+    print(a:sub(i, j))
+    
+    -- 匹配查找
+    data = "Today is 1/29/2018"
+    -- print(data:match("%d+/%d+/%d+"))
+    
+    -- 替换字符串
+    print(data:gsub("Today", "YesToday"))  -- 返回值: 替换后的字符串 替换的次数
+    
+    count = select(2, data:gsub(" ", " ")) -- 统计字符串中空格的个数
+    print(count)
+    
+    -- string.gmatch 会返回一个函数，通过这个函数可以遍历到所有出现指定模式的地方
+    words = {}
+    for w in string.gmatch(data, "%a+") do
+        words[#words+1] = w
+    end
+    print("words : #", #words)
+    ]]
+```
+
 &emsp;&emsp;原始的Lua解释器操作字符串的能力是很有限的。一个程序只能创建字符串常量、连接字符串及获取字符串的长度。它无法提取子串或者检索字符串的内容。在Lua中真正的字符串操作能力来源于字符串库。
 
 &emsp;&emsp;字符串库中的所有函数都导出在模块`string`中。在Lua5.1中，它还将这些函数导出作为`string`类型的方法。这样，假设要将一个字符串转换到大写形式，可以写`string.upper(s)`，也可以写`s:upper()`。但是为了避免与Lua5.0不兼容，在本书的大多数示例中将采用基于模块的写法。
