Updates 第三章 XLua教程/3_16 载入Lua脚本.md
Auto commit by GitBook Editor

--- a/第三章 XLua教程/3_16 载入Lua脚本.md
+++ b/第三章 XLua教程/3_16 载入Lua脚本.md
@@ -32,7 +32,7 @@
 ```
 
 将`byfile.lua.txt`存放在`Resources`文件夹下。
-注意：放在Resources文件夹下的lua文件必须以“.lua.txt”后缀。
+注意：放在Resources文件夹下的lua文件必须以“`.lua.txt`”后缀。
 
 ```lua
     print('hello world')
