--- a/第三章 XLua教程/3_16 载入Lua脚本.md
+++ b/第三章 XLua教程/3_16 载入Lua脚本.md
@@ -179,7 +179,8 @@
     
     		void Start () {
     
-                // 注册自定义loader 通过自定义loader加载的文件，文件后缀可以使用.lua
+                // 注册自定义loader 
+                // 通过自定义loader加载的文件，文件后缀在loader中指定
                 luaEnv.AddLoader((ref string filePath)=>{
                     string path = Application.dataPath + "/LessonXLua_shenjun/01_LoadLuaScript/03_ByLoader/" + filePath + ".lua.txt";
                     if(File.Exists(path))
