Updates 第三章 XLua教程/3_16 载入Lua脚本.md
Auto commit by GitBook Editor

--- a/第三章 XLua教程/3_16 载入Lua脚本.md
+++ b/第三章 XLua教程/3_16 载入Lua脚本.md
@@ -180,7 +180,7 @@
     		void Start () {
     
                 // 注册自定义loader 
-                // 通过自定义loader加载的文件，文件后缀在loader中指定
+                // 通过自定义loader加载的文件，文件后缀可以在loader中指定，不必一定是“.lua.txt”
                 luaEnv.AddLoader((ref string filePath)=>{
                     string path = Application.dataPath + "/LessonXLua_shenjun/01_LoadLuaScript/03_ByLoader/" + filePath + ".lua.txt";
                     if(File.Exists(path))
